syntax = "proto3";

message Drugstore {
    int32 id = 1;
    string name = 2;
    string cnpj = 3;
    string address = 4;
    string phone = 5;
    string logo = 6;
    string time_open = 7;
    string time_close = 8;
    string in_charge = 9;
    string branches = 10;
}

message GetDrugstoreByIdRequest {
    int32 id = 1;
}

message GetDrugstoreByIdResponse {
    Drugstore drugstore = 1;
}

message GetAllDrugstoresRequest {}

message GetAllDrugstoresResponse {
    repeated Drugstore drugstores = 1;
}

message CreateDrugstoreRequest {
    Drugstore drugstore = 1;
}

message CreateDrugstoreResponse {
    Drugstore drugstore = 1;
}

message DeleteDrugstoreRequest {
    int32 id = 1;
}

message DeleteDrugstoreResponse {}

message UpdateDrugstoreRequest {
    Drugstore drugstore = 1;
}

message UpdateDrugstoreResponse {}

service DrugstoreService {
    rpc GetDrugstoreById(GetDrugstoreByIdRequest) returns (GetDrugstoreByIdResponse);
    rpc GetAllDrugstores(GetAllDrugstoresRequest) returns (GetAllDrugstoresResponse);
    rpc CreateDrugstore(CreateDrugstoreRequest) returns (CreateDrugstoreResponse);
    rpc DeleteDrugstore(DeleteDrugstoreRequest) returns (DeleteDrugstoreResponse);
    rpc UpdateDrugstore(UpdateDrugstoreRequest) returns (UpdateDrugstoreResponse);
}